--- a/src/components/AnimatedCard/animatedcard.styles.css
+++ b/src/components/AnimatedCard/animatedcard.styles.css
@@ -9,11 +9,11 @@ h2 {
 }
 
 .flip-card {
-    width: 250px;
-    height: 325px;
+    width: 300px;
+    height: 350px;
     border-radius: 20px;
-    padding: 20px;
     position: relative;
+    margin: 10px 0px;
 }
 
 .flip-card-front,
@@ -23,13 +23,16 @@ h2 {
     position: absolute;
     border-radius: 20px;
     backface-visibility: hidden;
-    padding: 10px;
 }
 
 .flip-card-front {
     background-color: white;
     color: black;
     line-height: 20px;
+}
+
+.flip-card-front > * {
+    margin: 0px 10px;
 }
 
 .flip-card-back {
