--- a/src/pages/main/main.styles.css
+++ b/src/pages/main/main.styles.css
@@ -37,3 +37,13 @@ div.title {
     font-size: 25px;
     cursor: pointer;
 }
+
+.container {
+    padding: 16px;
+}
+
+@media only screen and (min-width: 768px) {
+    .container {
+        padding: 32px;
+    }
+}
