--- a/src/sections/Intro/intro.styles.css
+++ b/src/sections/Intro/intro.styles.css
@@ -45,6 +45,10 @@
 }
 
 @media only screen and (min-width: 768px) {
+    .intro {
+        height: 69vh;
+    }
+    
     .column {
         width: 50%;
     }
