Added Pills and finalized the ProjectMiniView Section

--- a/src/pages/main/main.styles.css
+++ b/src/pages/main/main.styles.css
@@ -30,6 +30,10 @@ a {
     cursor: pointer;
 }
 
+.icon--black {
+    color: black;
+}
+
 .flexbox {
     display: flex;
     flex-direction: column;
