--- a/src/sections/Projects/projects.styles.css
+++ b/src/sections/Projects/projects.styles.css
@@ -1,41 +1,56 @@
 .row {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .section,
 .modal {
     background-color: white;
     margin: 16px;
-    padding: 16px;
+    padding: 0px 8px;
     border-radius: 16px;
+    flex: 1;
 }
 
-.section-1 {
-    flex: 3;
-}
-
-.section-2 {
-    flex: 5;
+.section {
+    cursor: pointer;
 }
 
 .modal {
-    position: fixed; /* Stay in place */
+    position: fixed;
     margin: 0;
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    padding: 1px 8px;
     border-radius: 16px;
     width: 80%;
+}
+
+.modal-content-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .row {
+        flex-direction: row;
+    }
+
+    .modal-content {
+        width: 50%;
+    }
 }
