--- a/src/components/AnimatedCard/animatedcard.styles.css
+++ b/src/components/AnimatedCard/animatedcard.styles.css
@@ -25,7 +25,7 @@ ul {
 }
 
 .flip-card-front {
-    background-color: white;
+    background-color: whitesmoke;
     color: black;
     line-height: 20px;
 }
