--- a/src/sections/Projects/projects.styles.css
+++ b/src/sections/Projects/projects.styles.css
@@ -6,7 +6,7 @@
 
 .section,
 .modal {
-    background-color: white;
+    background-color: whitesmoke;
     margin: 16px;
     padding: 0px 8px;
     border-radius: 16px;
@@ -31,7 +31,7 @@
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: whitesmoke;
     margin: auto;
     padding: 1px 8px;
     border-radius: 16px;
